public/css/global.css
@import "fonts.css";

body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Manrope", sans-serif;
}

:root {
  --primary-color: #000000;
  --secondary-color: #000000;
  --body-font-color: rgb(74, 74, 74);
  --header-font-color: black;
  --solid-gray-bg-color: rgb(249, 249, 249);
  --pale-outline-color: rgb(189, 189, 189);
}

.primary-button {
  padding: 10px;
  border-radius: 10px;
  border: none;
  background-color: black;
  color: white;
}

.solid-button {
  font-family: "Manrope", sans-serif;
  font-size: 0.9rem;
  font-weight: 700;
  padding: 10px 20px;
  border-radius: 5px;
  border: 1px solid black;
  background-color: black;
  color: white;
  cursor: pointer;
  transition:
    background-color ease-in-out 300ms,
    color ease-in-out 300ms,
    border ease-in-out 300ms;
}

.solid-button:hover {
  background-color: white;
  color: black;
  border: 1px solid black;
}

.hollow-button {
  font-family: "Manrope", sans-serif;
  font-size: 0.9rem;
  font-weight: 700;
  padding: 10px 20px;
  border-radius: 5px;
  border: 1px solid black;
  background-color: white;
  color: black;
  cursor: pointer;
  transition:
    background-color ease-in-out 300ms,
    color ease-in-out 300ms,
    border ease-in-out 300ms;
}

.hollow-button:hover {
  background-color: black;
  color: white;
  border: 1px solid white;
}

.action-button {
  font-size: 1.3rem;
}

.container {
  min-height: 100vh;
  width: 100%;
}

.auth-container {
  height: 100vh;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.auth-form {
  height: auto;
  width: 300px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.auth-message {
  font-size: 0.9rem;
  display: none;
}

input {
  padding: 10px;
  width: 300px;
  margin-bottom: 12px;
}

a {
  font-size: 0.9rem;
  color: var(--primary-color);
  text-decoration: none;
}

a:active {
  color: none;
}

.line-spacer {
  width: 100%;
  height: 1px;
  background: var(--body-font-color);
  border: none;
}

.side-nav {
  position: fixed;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 100vh;
  width: 20vw;
  row-gap: 2rem;
  box-sizing: border-box;
  background-color: var(--solid-gray-bg-color);
  padding: 1rem;
}

.main-content {
  display: grid;
  grid-template-columns: 1fr 5fr;
  grid-column-start: 2;
}

.header-logo {
  display: flex;
  width: 80%;
}

.nav-header {
  display: flex;
  flex-direction: column;
  /* row-gap: 3rem; */
}

.nav-footer {
  display: flex;
  flex-direction: column;
  row-gap: 1rem;
}

.nav-button {
  width: 100%;
  font-family: "Manrope", sans-serif;
  font-size: 0.9rem;
  font-weight: 700;
  padding: 15px 20px;
  border: 1px solid black;
  border-radius: 5px;
  background-color: white;
  color: black;
  cursor: pointer;
  transition: background-color ease-in-out 0.3s;
  box-sizing: border-box;
  text-align: left;
  display: flex;
  align-items: center;
  column-gap: 1rem;
}

.nav-button:hover,
.nav-button.active {
  width: 100%;
  font-family: "Manrope", sans-serif;
  font-size: 0.9rem;
  font-weight: 700;
  border: 1px solid black;
  padding: 15px 20px;
  border-radius: 5px;
  background-color: black;
  color: white;
  cursor: pointer;
  box-sizing: border-box;
  text-align: left;
  display: flex;
  align-items: center;
  column-gap: 1rem;
}

.nav-buttons {
  display: flex;
  flex-direction: column;
  row-gap: 1rem;
}

.logo-img {
  width: 100%;
  padding: 1rem 2rem;
  margin-left: -1rem;
}

.field-set {
  display: flex;
  flex-direction: column;
  row-gap: 0.3rem;
  width: 100%;
}

.field-label {
  font-size: 0.9rem;
  color: var(--body-font-color);
}

.text-field {
  font-family: "Manrope", sans-serif;
  border: 1px solid black;
  border-radius: 5px;
  font-size: 0.9rem;
  width: 100%;
  box-sizing: border-box;
  outline: none;
  background-color: var(--solid-gray-bg-color);
  border-color: var(--pale-outline-color);
}

.text-field-area {
  font-family: "Manrope", sans-serif;
  border: 1px solid black;
  border-radius: 5px;
  font-size: 0.9rem;
  width: 100%;
  box-sizing: border-box;
  outline: none;
  resize: none;
  padding: 0.5rem;
  border-color: var(--pale-outline-color);
  background-color: var(--solid-gray-bg-color);
}

